--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "mini hmr ",
   "main": "./src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack",
+    "dev": "node ./src/myHMR-webpack-dev-server.js"
   },
   "keywords": [
     "hmr"
@@ -13,11 +14,12 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "html-webpack-plugin": "^3.2.0",
+    "memory-fs": "^0.5.0",
     "mime": "^2.4.4",
     "socket.io": "^2.3.0",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10",
-    "memory-fs": "^0.5.0",
-    "html-webpack-plugin": "^3.2.0"
+    "webpack-merge": "^4.2.2"
   }
 }
